[project]
name = "testionary"
version = "0.1.0"
description = "A library providing dictionary types for interspecting code behavior during test or debugging."
readme = "README.md"
authors = [
    { name = "Fredrik Sjöstrand", email = "fre.sjostrand@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest>=8.4.1",
]
